--- a/Biblioteka2.csproj
+++ b/Biblioteka2.csproj
@@ -58,21 +58,40 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\DbModel.cs" />
-    <Compile Include="Classes\Entityes\Author.cs" />
-    <Compile Include="Classes\Entityes\Book.cs" />
-    <Compile Include="Classes\Entityes\Publisher.cs" />
+    <Compile Include="Classes\Entityes\AuthorClass.cs" />
+    <Compile Include="Classes\Entityes\BookClass.cs" />
+    <Compile Include="Classes\Entityes\PublisherClass.cs" />
+    <Compile Include="Classes\Entityes\TrainessClass.cs" />
     <Compile Include="Classes\Entityes\TypeClass.cs" />
-    <Compile Include="Forms\TestForm.cs">
+    <Compile Include="Forms\AddBookForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\TestForm.Designer.cs">
-      <DependentUpon>TestForm.cs</DependentUpon>
+    <Compile Include="Forms\AddBookForm.Designer.cs">
+      <DependentUpon>AddBookForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\AddTrainessForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddTrainessForm.Designer.cs">
+      <DependentUpon>AddTrainessForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\TrainessesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TrainessesForm.Designer.cs">
+      <DependentUpon>TrainessesForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Forms\TestForm.resx">
-      <DependentUpon>TestForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\AddBookForm.resx">
+      <DependentUpon>AddBookForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AddTrainessForm.resx">
+      <DependentUpon>AddTrainessForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TrainessesForm.resx">
+      <DependentUpon>TrainessesForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
