--- a/Biblioteka2.csproj
+++ b/Biblioteka2.csproj
@@ -63,11 +63,24 @@
     <Compile Include="Classes\Entityes\PublisherClass.cs" />
     <Compile Include="Classes\Entityes\TrainessClass.cs" />
     <Compile Include="Classes\Entityes\TypeClass.cs" />
+    <Compile Include="Classes\Entityes\UserClass.cs" />
+    <Compile Include="Forms\AddAvtorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddAvtorForm.Designer.cs">
+      <DependentUpon>AddAvtorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\AddBookForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\AddBookForm.Designer.cs">
       <DependentUpon>AddBookForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\BookForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\BookForm.Designer.cs">
+      <DependentUpon>BookForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\AddTrainessForm.cs">
       <SubType>Form</SubType>
@@ -84,8 +97,14 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\AddAvtorForm.resx">
+      <DependentUpon>AddAvtorForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddBookForm.resx">
       <DependentUpon>AddBookForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\BookForm.resx">
+      <DependentUpon>BookForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddTrainessForm.resx">
       <DependentUpon>AddTrainessForm.cs</DependentUpon>
