--- a/Biblioteka2.csproj
+++ b/Biblioteka2.csproj
@@ -60,7 +60,9 @@
     <Compile Include="Classes\DbModel.cs" />
     <Compile Include="Classes\Entityes\AuthorClass.cs" />
     <Compile Include="Classes\Entityes\BookClass.cs" />
+    <Compile Include="Classes\Entityes\IssuanceClass.cs" />
     <Compile Include="Classes\Entityes\PublisherClass.cs" />
+    <Compile Include="Classes\Entityes\Purchase_accountingClass.cs" />
     <Compile Include="Classes\Entityes\TrainessClass.cs" />
     <Compile Include="Classes\Entityes\TypeClass.cs" />
     <Compile Include="Classes\Entityes\UserClass.cs" />
@@ -82,17 +84,29 @@
     <Compile Include="Forms\AuthorizationForm.Designer.cs">
       <DependentUpon>AuthorizationForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\BookForm.cs">
+    <Compile Include="Forms\IssuanceForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\BookForm.Designer.cs">
-      <DependentUpon>BookForm.cs</DependentUpon>
+    <Compile Include="Forms\IssuanceForm.Designer.cs">
+      <DependentUpon>IssuanceForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Test.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Test.Designer.cs">
+      <DependentUpon>Test.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\AddTrainessForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\AddTrainessForm.Designer.cs">
       <DependentUpon>AddTrainessForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Home_pageForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Home_pageForm.Designer.cs">
+      <DependentUpon>Home_pageForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\TrainessesForm.cs">
       <SubType>Form</SubType>
@@ -112,11 +126,17 @@
     <EmbeddedResource Include="Forms\AuthorizationForm.resx">
       <DependentUpon>AuthorizationForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\BookForm.resx">
-      <DependentUpon>BookForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\IssuanceForm.resx">
+      <DependentUpon>IssuanceForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Test.resx">
+      <DependentUpon>Test.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddTrainessForm.resx">
       <DependentUpon>AddTrainessForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Home_pageForm.resx">
+      <DependentUpon>Home_pageForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\TrainessesForm.resx">
       <DependentUpon>TrainessesForm.cs</DependentUpon>
