--- a/Biblioteka2.csproj
+++ b/Biblioteka2.csproj
@@ -106,6 +106,12 @@
     <Compile Include="Forms\AddIssuanceForm.Designer.cs">
       <DependentUpon>AddIssuanceForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\AddPurchaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddPurchaseForm.Designer.cs">
+      <DependentUpon>AddPurchaseForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\AuthorizationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +129,18 @@
     </Compile>
     <Compile Include="Forms\LibraryForm.Designer.cs">
       <DependentUpon>LibraryForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\LitTurnoverForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\LitTurnoverForm.Designer.cs">
+      <DependentUpon>LitTurnoverForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\PurchaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\PurchaseForm.Designer.cs">
+      <DependentUpon>PurchaseForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Test.cs">
       <SubType>Form</SubType>
@@ -160,6 +178,9 @@
     <EmbeddedResource Include="Forms\AddIssuanceForm.resx">
       <DependentUpon>AddIssuanceForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AddPurchaseForm.resx">
+      <DependentUpon>AddPurchaseForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\AuthorizationForm.resx">
       <DependentUpon>AuthorizationForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -168,6 +189,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\LibraryForm.resx">
       <DependentUpon>LibraryForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\LitTurnoverForm.resx">
+      <DependentUpon>LitTurnoverForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PurchaseForm.resx">
+      <DependentUpon>PurchaseForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Test.resx">
       <DependentUpon>Test.cs</DependentUpon>
