--- a/Biblioteka2.csproj
+++ b/Biblioteka2.csproj
@@ -107,6 +107,12 @@
     <Compile Include="Forms\AddIssuanceForm.Designer.cs">
       <DependentUpon>AddIssuanceForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\AddLitTurnoverForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddLitTurnoverForm.Designer.cs">
+      <DependentUpon>AddLitTurnoverForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\AddPublisherForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -196,6 +202,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddIssuanceForm.resx">
       <DependentUpon>AddIssuanceForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AddLitTurnoverForm.resx">
+      <DependentUpon>AddLitTurnoverForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddPublisherForm.resx">
       <DependentUpon>AddPublisherForm.cs</DependentUpon>
